============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Changes to version 6.0.1 (since 6.0):
* user interface
  - Language: translation updates
  - Language: enable file mapping on PPC2000/PPC2002
  - dialog "Switches": portrait mode layout fixed
  - dialog "Statistics": draw trace on task page
* terrain / topology
  - minor memory leak fixed

Changes to version 6.0 (since 5.2.4):
* build system
  - compile with gcc / mingw32 / mingw32ce instead of Visual C++
* data files
  - support for SeeYou and Zander waypoint files
  - support for TNP airspace files
  - when started from SD card, XCSoarData is stored on SD card, too
  - when a XCSoarData directory exists on SD card, it is preferred
* devices
  - Altair Pro: task declaration
  - new drivers:
    - Flymaster F1
    - Flytec
    - ILEC SN10
    - Leonardo
  - NMEA logger and NMEA replay
* terrain / topology
  - cached terrain load during startup (faster)
  - incremental (faster) terrain/topology updates
  - faster terrain/topology rendering
  - slope shading can be turned off
  - auto-scale terrain colors
* user interface
  - mouse gestures
  - translation compatible with gettext / libintl
  - language auto-detection
  - configurable temperature unit (Fahrenheit)
  - configurable trail colors
* gauges
  - new FLARM radar screen
  - thermal assistant
* task
  - full rewrite of the engine, new task editor
  - support more task types
  - saved tasks are XML
  - alternates list
  - instant OLC score
  - OLC plus rules
  - instant AAT optimization

Changes from 5.2.2:
PAOLO:
- colorful vario gauge by Paolo (for FIVV only)
- (minor) infobox config layout in configuration
TOBIAS:
- ballast dump works outside task calculator
- start task info
ROB DUNNING:
- Font editing patch
- Allow DebugStore to use varargs and convert all ca