@@ -6,6 +6,7 @@ Changes to version 6.0.1 (since 6.0):
 * user interface
   - Language: translation updates
   - Language: enable file mapping on PPC2000/PPC2002
+  - Language: always fall back to resource data
   - dialog "Switches": portrait mode layout fixed
   - dialog "Statistics": draw trace on task page
 * terrain / topology
